# RSDPractice

./: README.md
Week 3/rsd_pub/src/: publisher_node.cpp
Week 3/rsd_sub/: CMakeLists.txt  package.xml
Week 4/: publisher_node.py
Week 4/rsd_robot_description/: package.xml
Week 5/franka_ros (copy)/franka_visualization/launch/: franka_visualization.launch
Week 5/franka_ros/franka_visualization/: CMakeLists.txt
Week 5/franka_ros/franka_visualization/launch/: franka_visualization.launch  franka_visualization.rviz  franka_visualization_gui.launch
Week 5/geomagic_ros/omni_common/launch/: omni.launch  omni_visualization.rviz
Week 5/geomagic_ros/omni_common/src/: omni.cpp
Week 5/geomagic_ros/omni_description/urdf/: omni.urdf
Week 5/geomagic_ros_/omni_common/launch/: omni_state.launch  omni_visualization.rviz
Week 5/teleop/: package.xml
Week 5/teleop/launch/: omni_gui_input.launch  omni_visualization.rviz  panda_visualization.rviz  teleop.launch
week10/dynamixel/: dx_conf.py  dx_test_GUI.py  dynamixel.py
week11/traj_planing_hw/: Trajectory.py  pandaKinematics.py  pandaROS.py  pandaVar.py
week3/rsd_pub/: CMakeLists.txt  package.xml
week4/: subscriber_node.py
week4/rsd_robot_description/: CMakeLists.txt
week5/franka_ros/: README.md
week5/teleop/: CMakeLists.txt
week5/teleop/launch/: omni_visualization.rviz  panda_visualization.rviz  teleop.launch  teleop_gui.launch
week5/teleop/script/: teleop.py
week6/teleop_ik/: omniKinematics.py  omniVar.py  pandaKinematics.py  pandaKinematicsSym.py  pandaVar.py  teleop.py
(+5 files in other folders)
